update stroke color

--- a/page1.html
+++ b/page1.html
@@ -135,7 +135,7 @@
   .style("stroke", function(d) { 
       // Add stroke for selected states
       var highlightStates = ["Idaho", "Montana", "Oklahoma", "Vermont", "Tennessee", "Maine", "Louisiana"];
-      return highlightStates.includes(d.State) ? "lime" : "none"; 
+      return highlightStates.includes(d.State) ? "black" : "none"; 
   })
   .style("stroke-width", function(d) {
       var highlightStates = ["Idaho", "Montana", "Oklahoma", "Vermont", "Tennessee", "Maine", "Louisiana"];
