--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             .style("stroke", function(d) { 
             // Add stroke for selected states
             var highlightStates = ["Idaho", "Montana", "Oklahoma", "Vermont", "Tennessee", "Maine", "Louisiana"];
-            return highlightStates.includes(d.State) ? "lime" : "none"; 
+            return highlightStates.includes(d.State) ? "black" : "none"; 
   })
               .on("mouseover", function(event, d) {
                   tooltip.style("visibility", "visible")
