--- a/page1.html
+++ b/page1.html
@@ -20,8 +20,8 @@
 <body>
   <h1>Income by State With Political Party</h1>
   <ul>
-    <li>This scene labels the data points blue if the governor of that state is Democratic or red if the governor of that state is Republican.</li>
-    <li>As you can see there doesn't seem to be a correlation between the top growing states and party policy.</li>
+    <li>In this scene we will explore if there is a connection between political policy and income growth. To do so we are displaying the political party of each state's governer as the color of the data point. </li>
+    <li>As we can see the cluster with the highest earning growth has an even mix of political parties for their governer.</li>
   </ul>
 
   <!-- Dropdown menu for party selection -->
