--- a/page2.html
+++ b/page2.html
@@ -19,8 +19,11 @@
 <body>
     <h1>Income by State - Rural vs Urban</h1>
     <ul>
-        <li>This scene labels the data points green if it is a rural state or yellow if it is a urban state.</li>
-        <li>As you can see rural states have more income growth.</li>
+        <li>In this scene we explore if there is a connection between population density and income growth.</li>
+        <li>The scatterplot has colored the dot green if the population density (people per square mile) is less than the national median and yellow if it is above. We refer to these as rural or urban respectively.</li>
+        <li>We can see that the 6 of the 7 top growing states were rural states.</li>
+        <li>This is consistent with open source reporting that due to COVID and rise in remote work many high paying workers moved to more rural states.</li>
+        <li>The conclusion of this slideshow is that it is most probable the highest income growth states had this growth because they were rural in nature.</li>
     </ul>
     <div id="filter-container" style="position: absolute; right: 20px; top: 20px;">
         <label for="urbanRuralFilter">Filter by Area Type:</label>
