--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             .attr("cx", function (d) { return x(d['YoY Growth']); } )
             .attr("cy", function (d) { return y(d['2021 Median income']); } )
             .attr("r", 5)
-            .attr("fill", "green")
+            .attr("fill", "turquoise")
             .style("stroke", function(d) { 
             // Add stroke for selected states
             var highlightStates = ["Idaho", "Montana", "Oklahoma", "Vermont", "Tennessee", "Maine", "Louisiana"];
