--- a/page1.html
+++ b/page1.html
@@ -215,7 +215,7 @@ legend.append("rect")
       return d === "High Growth States" ? "black" : "none";
   })
   .style("stroke-width", function(d) {
-      return d === "High Growth States" ? 1 : 0;
+      return d === "High Growth" ? 1 : 0;
   });
 
 legend.append("text")
