update legend again

--- a/page1.html
+++ b/page1.html
@@ -198,7 +198,7 @@
           .text(function(d) { return d; });   
 
                 // Define the legend
-var legendData = color.domain().concat(["High Growth States"]);
+var legendData = color.domain().concat(["High Growth"]);
 var legend = svg.selectAll(".legend")  // Append to the svg's g element
   .data(legendData)  // Use the new legend data array
   .enter().append("g")
