--- a/page2.html
+++ b/page2.html
@@ -171,26 +171,35 @@
                 .attr("dy", ".35em")
                 .style("text-anchor", "end")
                 .text(d => d);
-            // Define the legend
-var legendData = color.domain().concat(["High Growth"]);
-var legend = svg.selectAll(".legend")  // Append to the svg's g element
-  .data(legendData)  // Use the new legend data array
-  .enter().append("g")
-  .attr("class", "legend")
-  .attr("transform", function(d, i) { return "translate(" + (width - 100) + "," + (20 * i) + ")"; });  // Position the legend elements
+                var legendData = color.domain().concat(["High Growth"]);
+
+var legend = svg.selectAll(".legend")
+    .data(legendData)
+    .enter().append("g")
+    .attr("class", "legend")
+    .attr("transform", (d, i) => `translate(0,${i * 20})`);
 
 legend.append("rect")
-  .attr("width", 18)
-  .attr("height", 18)
-  .style("fill", function(d) { 
-      return d === "High Growth" ? "white" : color(d); 
-  })
-  .style("stroke", function(d) {
-      return d === "High Growth" ? "black" : "none";
-  })
-  .style("stroke-width", function(d) {
-      return d === "High Growth" ? 1 : 0;
-  }); 
+    .attr("x", width - 18)
+    .attr("width", 18)
+    .attr("height", 18)
+    .style("fill", function(d) { 
+        return d === "High Growth" ? "white" : color(d); 
+    })
+    .style("stroke", function(d) {
+        return d === "High Growth" ? "black" : "none";
+    })
+    .style("stroke-width", function(d) {
+        return d === "High Growth" ? 1 : 0;
+    });
+
+legend.append("text")
+    .attr("x", width - 24)
+    .attr("y", 9)
+    .attr("dy", ".35em")
+    .style("text-anchor", "end")
+    .text(d => d);
+           
 
         }
     </script>
