--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <li>Feel free to hover over the various data points and you will get a tooltip to get more information about that state.</li>
     </ul>
     <div id="scatter-plot"></div>
-    <svg id="legend" width="500" height="100">
-        <circle cx="30" cy="30" r="6" style="fill: turquoise; stroke: black;"></circle>
-        <text x="40" y="35" font-size="15px">= High Growth</text>
-    </svg>
+<!-- Adding Legend -->
+<svg id="legend" width="500" height="100">
+    <rect x="30" y="20" width="15" height="15" style="fill: none; stroke: black;"></rect>
+    <text x="50" y="35" font-size="15px">= High Growth</text>
+</svg>
     <script>
     var margin = {top: 20, right: 20, bottom: 60, left: 120};  // Further increased left margin
     var width = 960 - margin.left - margin.right;
