--- a/page1.html
+++ b/page1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>Income by State With Political Party</title>
+  <title>Political Policy and Income Growth</title>
   <link rel="stylesheet" href="style.css">
   <style>
     #filter-container {
@@ -18,7 +18,7 @@
   
 </head>
 <body>
-  <h1>Income by State With Political Party</h1>
+  <h1>Political Policy and Income Growth</h1>
   <ul>
     <li>In this scene we will explore if there is a connection between political policy and income growth. To do so we are displaying the political party of each state's governer as the color of the data point. </li>
     <li>As we can see the cluster with the highest earning growth has an even mix of political parties for their governer.</li>
