--- a/page2.html
+++ b/page2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Page 2 - Population Density</title>
+    <title>Population Density and Income Growth</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <style>
@@ -17,7 +17,7 @@
     }
   </style>
 <body>
-    <h1>Income by State - Rural vs Urban</h1>
+    <h1>Population Density and Income Growth</h1>
     <ul>
         <li>In this scene we explore if there is a connection between population density and income growth.</li>
         <li>The scatterplot has colored the dot green if the population density (people per square mile) is less than the national median and yellow if it is above. We refer to these as rural or urban respectively.</li>
